include/xprs.h


typedef struct xo_prob_struct* XPRSprob;


int XPRS_CC XPRSgoal(XPRSprob prob, const char* _filename, const char* _sflags);

int XPRS_CC XPRSreadprob(XPRSprob prob, const char* _sprobname, const char* _sflags);

int XPRS_CC XPRSloadlp(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _mstart[], const int _mnel[], const int _mrwind[], const double _dmatval[], const double _dlb[], const double _dub[]);

int XPRS_CC XPRSloadqp(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _mstart[], const int _mnel[], const int _mrwind[], const double _dmatval[], const double _dlb[], const double _dub[], int nquads, const int _mqcol1[], const int _mqcol2[], const double _dqval[]);

int XPRS_CC XPRSloadqglobal(XPRSprob prob, const char* probname, int ncols, int nrows, const char qsenx[], const double rhsx[], const double range[], const double objx[], const int matbeg[], const int matcnt[], const int matind[], const double dmtval[], const double bndl[], const double bndu[], int nquads, const int mqcol1[], const int mqcol2[], const double dqval[], const int ngents, const int nsets, const char qgtype[], const int mgcols[], const double dlim[], const char qstype[], const int msstart[], const int mscols[], const double dref[]);

int XPRS_CC XPRSfixglobals(XPRSprob prob, int ifround);

int XPRS_CC XPRSloadmodelcuts(XPRSprob prob, int nmodcuts, const int _mrows[]);

int XPRS_CC XPRSloaddelayedrows(XPRSprob prob, int nrows, const int _mrows[]);

int XPRS_CC XPRSloaddirs(XPRSprob prob, int ndirs, const int _mcols[], const int _mpri[], const char _sbr[], const double dupc[], const double ddpc[]);

int XPRS_CC XPRSloadbranchdirs(XPRSprob prob, int ndirs, const int _mcols[], const int _mbranch[]);

int XPRS_CC XPRSloadpresolvedirs(XPRSprob prob, int ndirs, const int _mcols[], const int _mpri[], const char _sbr[], const double dupc[], const double ddpc[]);

int XPRS_CC XPRSgetdirs(XPRSprob prob, int* ndirs, int _mcols[], int _mpri[], char _sbr[], double dupc[], double ddpc[]);

int XPRS_CC XPRSloadglobal(XPRSprob prob, const char* _sprobname, int ncols, int nrows, const char _srowtypes[], const double _drhs[], const double _drange[], const double _dobj[], const int _mstart[], const int _mnel[], const int _mrwind[], const double _dmatval[], const double _dlb[], const double _dub[], int ngents, int nsets, const char _qgtype[], const int _mgcols[], const double _dlim[], const char _stype[], const int _msstart[], const int _mscols[], const double _dref[]);

int XPRS_CC XPRSaddnames(XPRSprob prob, int _itype, const char _sname[], int first, int last);

int XPRS_CC XPRSaddsetnames(XPRSprob prob, const char _sname[], int first, int last);

int XPRS_CC XPRSscale(XPRSprob prob, const int mrscal[], const int mcscal[]);

int XPRS_CC XPRSreaddirs(XPRSprob prob, const char* _sfilename);

int XPRS_CC XPRSwritedirs(XPRSprob prob, const char* _sfilename);

int XPRS_CC XPRSsetindicators(XPRSprob prob, int nrows, const int _mrows[], const int _inds[], const int _comps[]);

int XPRS_CC XPRSgetindicators(XPRSprob prob, int _inds[], int _comps[], int first, int last);

int XPRS_CC XPRSdelindicators(XPRSprob prob, int first, int last);

int XPRS_CC XPRSdumpcontrols(XPRSprob prob);


int XPRS_CC XPRSminim(XPRSprob prob, const char* _sflags);

int XPRS_CC XPRSmaxim(XPRSprob prob, const char* _sflags);

int XPRS_CC XPRSlpoptimize(XPRSprob prob, const char* _sflags);

int XPRS_CC XPRSmipoptimize(XPRSprob prob, const char* _sflags);

int XPRS_CC XPRSrange(XPRSprob prob);

int XPRS_CC XPRSgetrowrange(XPRSprob prob, double _upact[], double _loact[], double _uup[], double _udn[]);

int XPRS_CC XPRSgetcolrange(XPRSprob prob, double _upact[], double _loact[], double _uup[], double _udn[], double _ucost[], double _lcost[]);

int XPRS_CC XPRSgetpivotorder(XPRSprob prob, int mpiv[]);

int XPRS_CC XPRSgetpresolvemap(XPRSprob prob, int rowmap[], int colmap[]);

int XPRS_CC XPRSreadbasis(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSwritebasis(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSglobal(XPRSprob prob);

int XPRS_CC XPRSinitglobal(XPRSprob prob);

int XPRS_CC XPRSwriteprtsol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSalter(XPRSprob prob, const char* _sfilename);

int XPRS_CC XPRSwritesol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSwritebinsol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSreadbinsol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSwriteslxsol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSreadslxsol(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSwriteprtrange(XPRSprob prob);

int XPRS_CC XPRSwriterange(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSgetsol(XPRSprob prob, double _dx[], double _dslack[], double _dual[], double _dj[]);

int XPRS_CC XPRSgetpresolvesol(XPRSprob prob, double _dx[], double _dslack[], double _dual[], double _dj[]);

int XPRS_CC XPRSgetinfeas(XPRSprob prob, int* npv, int* nps, int* nds, int* ndv, int mx[], int mslack[], int mdual[], int mdj[]);

int XPRS_CC XPRSgetscaledinfeas(XPRSprob prob, int* npv, int* nps, int* nds, int* ndv, int mx[], int mslack[], int mdual[], int mdj[]);

int XPRS_CC XPRSgetunbvec(XPRSprob prob, int* icol);

int XPRS_CC XPRSbtran(XPRSprob prob, double dwork[]);

int XPRS_CC XPRSftran(XPRSprob prob, double dwork[]);

int XPRS_CC XPRSgetobj(XPRSprob prob, double _dobj[], int first, int last);

int XPRS_CC XPRSgetrhs(XPRSprob prob, double _drhs[], int first, int last);

int XPRS_CC XPRSgetrhsrange(XPRSprob prob, double _drng[], int first, int last);

int XPRS_CC XPRSgetlb(XPRSprob prob, double _dbdl[], int first, int last);

int XPRS_CC XPRSgetub(XPRSprob prob, double _dbdu[], int first, int last);

int XPRS_CC XPRSgetcols(XPRSprob prob, int _mstart[], int _mrwind[], double _dmatval[], int maxcoeffs, int* ncoeffs, int first, int last);

int XPRS_CC XPRSgetrows(XPRSprob prob, int _mstart[], int _mclind[], double _dmatval[], int maxcoeffs, int* ncoeffs, int first, int last);

int XPRS_CC XPRSgetcoef(XPRSprob prob, int _irow, int _icol, double* _dval);

int XPRS_CC XPRSgetmqobj(XPRSprob prob, int _mstart[], int _mclind[], double _dobjval[], int maxcoeffs, int* ncoeffs, int first, int last);

int XPRS_CC XPRSgetbarnumstability(XPRSprob prob, int dColumnStability[], int dRowStability[]);