include/xprs.bas


Declare PtrSafe Function XPRSgoal Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal filename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSreadprob Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSloadlp Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, drange As Double, dobj As Double, mstart As Long, mnel As Long, mrwind As Long, dmatval As Double, dlb As Double, dub As Double) As Long
Declare PtrSafe Function XPRSloadqp Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, drange As Double, dobj As Double, mstart As Long, mnel As Long, mrwind As Long, dmatval As Double, dlb As Double, dub As Double, ByVal nquads As LongLong, mqcol1 As Long, mqcol2 As Long, dqval As Double) As Long
Declare PtrSafe Function XPRSloadqglobal Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal probname As String, ByVal ncols As Long, ByVal nrows As Long, qsenx As Byte, rhsx As Double, range As Double, objx As Double, matbeg As Long, matcnt As Long, matind As Long, dmtval As Double, bndl As Double, bndu As Double, ByVal nquads As LongLong, mqcol1 As Long, mqcol2 As Long, dqval As Double, ByVal ngents As Long, ByVal nsets As Long, qgtype As Byte, mgcols As Long, dlim As Double, qstype As Byte, msstart As Long, mscols As Long, dref As Double) As Long
Declare PtrSafe Function XPRSfixglobals Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ifround As Long) As Long
Declare PtrSafe Function XPRSloadmodelcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nmodcuts As Long, mrows As Long) As Long
Declare PtrSafe Function XPRSloaddelayedrows Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mrows As Long) As Long
Declare PtrSafe Function XPRSloaddirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ndirs As Long, mcols As Long, mpri As Long, sbr As Byte, dupc As Double, ddpc As Double) As Long
Declare PtrSafe Function XPRSloadbranchdirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ndirs As Long, mcols As Long, mbranch As Long) As Long
Declare PtrSafe Function XPRSloadpresolvedirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ndirs As Long, mcols As Long, mpri As Long, sbr As Byte, dupc As Double, ddpc As Double) As Long
Declare PtrSafe Function XPRSgetdirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef ndirs As Long, mcols As Long, mpri As Long, sbr As Byte, dupc As Double, ddpc As Double) As Long
Declare PtrSafe Function XPRSloadglobal Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal ncols As Long, ByVal nrows As Long, srowtypes As Byte, drhs As Double, drange As Double, dobj As Double, mstart As Long, mnel As Long, mrwind As Long, dmatval As Double, dlb As Double, dub As Double, ByVal ngents As Long, ByVal nsets As Long, qgtype As Byte, mgcols As Long, dlim As Double, stype As Byte, msstart As Long, mscols As Long, dref As Double) As Long
Declare PtrSafe Function XPRSaddnames Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, sname As Byte, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSaddsetnames Lib "XPRS.DLL" (ByVal prob As LongPtr, sname As Byte, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSscale Lib "XPRS.DLL" (ByVal prob As LongPtr, mrscal As Long, mcscal As Long) As Long
Declare PtrSafe Function XPRSreaddirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String) As Long
Declare PtrSafe Function XPRSwritedirs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String) As Long
Declare PtrSafe Function XPRSsetindicators Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mrows As Long, inds As Long, comps As Long) As Long
Declare PtrSafe Function XPRSgetindicators Lib "XPRS.DLL" (ByVal prob As LongPtr, inds As Long, comps As Long, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSdelindicators Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSdumpcontrols Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long

Declare PtrSafe Function XPRSminim Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSmaxim Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSlpoptimize Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSmipoptimize Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSrange Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSgetrowrange Lib "XPRS.DLL" (ByVal prob As LongPtr, upact As Double, loact As Double, uup As Double, udn As Double) As Long
Declare PtrSafe Function XPRSgetcolrange Lib "XPRS.DLL" (ByVal prob As LongPtr, upact As Double, loact As Double, uup As Double, udn As Double, ucost As Double, lcost As Double) As Long
Declare PtrSafe Function XPRSgetpivotorder Lib "XPRS.DLL" (ByVal prob As LongPtr, mpiv As Long) As Long
Declare PtrSafe Function XPRSgetpresolvemap Lib "XPRS.DLL" (ByVal prob As LongPtr, rowmap As Long, colmap As Long) As Long
Declare PtrSafe Function XPRSreadbasis Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSwritebasis Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSglobal Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSinitglobal Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSwriteprtsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSalter Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String) As Long
Declare PtrSafe Function XPRSwritesol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSwritebinsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSreadbinsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSwriteslxsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSreadslxsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSwriteprtrange Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSwriterange Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSgetsol Lib "XPRS.DLL" (ByVal prob As LongPtr, dx As Double, dslack As Double, dual As Double, dj As Double) As Long
Declare PtrSafe Function XPRSgetpresolvesol Lib "XPRS.DLL" (ByVal prob As LongPtr, dx As Double, dslack As Double, dual As Double, dj As Double) As Long
Declare PtrSafe Function XPRSgetinfeas Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef npv As Long, ByRef nps As Long, ByRef nds As Long, ByRef ndv As Long, mx As Long, mslack As Long, mdual As Long, mdj As Long) As Long
Declare PtrSafe Function XPRSgetscaledinfeas Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef npv As Long, ByRef nps As Long, ByRef nds As Long, ByRef ndv As Long, mx As Long, mslack As Long, mdual As Long, mdj As Long) As Long
Declare PtrSafe Function XPRSgetunbvec Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef icol As Long) As Long
Declare PtrSafe Function XPRSbtran Lib "XPRS.DLL" (ByVal prob As LongPtr, dwork As Double) As Long
Declare PtrSafe Function XPRSftran Lib "XPRS.DLL" (ByVal prob As LongPtr, dwork As Double) As Long
Declare PtrSafe Function XPRSgetobj Lib "XPRS.DLL" (ByVal prob As LongPtr, dobj As Double, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetrhs Lib "XPRS.DLL" (ByVal prob As LongPtr, drhs As Double, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetrhsrange Lib "XPRS.DLL" (ByVal prob As LongPtr, drng As Double, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetlb Lib "XPRS.DLL" (ByVal prob As LongPtr, dbdl As Double, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetub Lib "XPRS.DLL" (ByVal prob As LongPtr, dbdu As Double, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetcols Lib "XPRS.DLL" (ByVal prob As LongPtr, mstart As Long, mrwind As Long, dmatval As Double, ByVal maxcoeffs As LongLong, ByRef ncoeffs As LongLong, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetrows Lib "XPRS.DLL" (ByVal prob As LongPtr, mstart As Long, mclind As Long, dmatval As Double, ByVal maxcoeffs As LongLong, ByRef ncoeffs As LongLong, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetcoef Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByVal icol As Long, ByRef dval As Double) As Long
Declare PtrSafe Function XPRSgetmqobj Lib "XPRS.DLL" (ByVal prob As LongPtr, mstart As Long, mclind As Long, dobjval As Double, ByVal maxcoeffs As LongLong, ByRef ncoeffs As LongLong, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetbarnumstability Lib "XPRS.DLL" (ByVal prob As LongPtr, dColumnStability As Long, dRowStability As Long) As Long
